--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,6 +8,7 @@
   margin: 0 auto; */
   display: flex;
   flex-direction: column;
+  margin: auto;
   /* background-color: black; */
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -15,7 +16,6 @@
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
   border: 1px solid red;
-  
 }
 
 /* .App {
