--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -17,13 +17,19 @@
 .about-me__line {
   width: 100%;
   height: 0;
-  border: 1px solid #000;
   margin-bottom: 90px;
+  border: 1px solid black;
+}
+
+.about-me__line_lightgrey {
+  border: 1px solid #e8e8e8;
+  margin-bottom: 20px;
 }
 
 .about-me__info {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 101px;
 }
 
 .about-me__description {
@@ -54,8 +60,8 @@
 .about-me__github-link {
   font-weight: 500;
   font-size: 14px;
-  border: none;
-  background-color: #fff;
+  text-decoration: none;
+  color: #000;
   cursor: pointer;
 }
 
@@ -63,4 +69,26 @@
   width: 270px;
   height: 327px;
   object-fit: cover;
+}
+
+.about-me__portfolio-title {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.11;
+  color: #a0a0a0;
+  margin-bottom: 50px;
+}
+
+.about-me__portfolio-site {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about-me__portfolio-site_name {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 1.66;
+  letter-spacing: -1px;
+  margin-bottom: 19px;
 }
