--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,11 @@
 @import "normalize.css";
 @import url(../../vendor/fonts.css);
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   min-width: 320px;
   max-width: 1280px;
