--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -2,25 +2,6 @@
   padding: 110px 70px 125px;
 }
 
-.about-me__text {
-  font-family: "Inter", "Atial", sans-serif;
-  font-style: normal;
-}
-
-.about-me__header {
-  font-weight: 400;
-  font-size: 22px;
-  letter-spacing: -1px;
-  margin-bottom: 23px;
-}
-
-.about-me__line {
-  width: 100%;
-  height: 0;
-  margin-bottom: 90px;
-  border: 1px solid black;
-}
-
 .about-me__line_lightgrey {
   border: 1px solid #e8e8e8;
   margin-bottom: 20px;
@@ -29,7 +10,7 @@
 .about-me__info {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 101px;
+  margin: 90px 0 101px;
 }
 
 .about-me__description {
