--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -3,32 +3,16 @@
   background-color: #f5f5f5;
 }
 
-.techs__header {
-  font-family: "Inter", "Atial", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  letter-spacing: -1px;
-  margin-bottom: 23px;
-}
-
-.techs__line {
-  width: 100%;
-  height: 0;
-  border: 1px solid #000;
-  margin-bottom: 90px;
-}
-
 .techs__description {
   display: flex;
   flex-direction: column;
   max-width: 500px;
-  margin: auto;
+  margin: 90px auto 0;
 }
 
 .techs__title {
-  font-family: "Inter", "Atial", sans-serif;
-  font-style: normal;
+  /* font-family: "Inter", "Atial", sans-serif;
+  font-style: normal; */
   font-weight: 400;
   font-size: 50px;
   letter-spacing: -1px;
@@ -37,9 +21,9 @@
 }
 
 .techs__text {
-  font-family: "Inter", "Atial", sans-serif;
+  /* font-family: "Inter", "Atial", sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 400; */
   font-size: 14px;
   line-height: 1.42;
   text-align: center;
