--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -1,7 +1,22 @@
+@keyframes promo-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .promo__logo {
+    animation: promo-logo-spin infinite 60s linear;
+  }
+}
+
 .promo {
   /* width: 100%; */
   min-height: 574px;
-  background-color: #465DFF;
+  background-color: #465dff;
   padding: 75px 70px;
   box-sizing: border-box;
   display: flex;
@@ -18,6 +33,12 @@
   border: none;
   text-decoration: none;
   max-width: 640px;
+
+  /* white-space: nowrap; */
+}
+
+.promo__title_nowrap {
+  white-space: nowrap;
 }
 
 .promo__subtitle {
@@ -36,7 +57,7 @@
 .promo__button {
   width: 129px;
   height: 36px;
-  background-color: #465DFF;
+  background-color: #465dff;
   /* font-family: 'Inter', 'Atial', sans-serif;
   font-style: normal;
   font-weight: 400; */
@@ -45,7 +66,7 @@
   border-radius: 3px;
   border-width: 1px;
   border-style: solid;
-  border-color: rgba(255,255,255, 0.6);
+  border-color: rgba(255, 255, 255, 0.6);
   cursor: pointer;
   margin-top: 146px;
 }
@@ -56,17 +77,67 @@
   height: 304px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .promo__logo {
-    animation: promo-logo-spin infinite 60s linear;
+/* media 900*/
+
+@media screen and (max-width: 900px) {
+  .promo {
+    padding: 140px 30px 76px;
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+  }
+
+  .promo__block {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 48px;
+  }
+
+  .promo__title {
+    font-size: 40px;
+    line-height: 1.25;
+
+    letter-spacing: -1px;
+  }
+
+  .promo__subtitle {
+    margin-top: 22px;
+  }
+
+  .promo__button {
+    margin-top: 92px;
   }
 }
 
-@keyframes promo-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* media 400*/
+
+@media screen and (max-width: 400px) {
+  .promo {
+    padding: 70px 7px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .promo__block {
+    margin-top: 44px;
+  }
+
+  .promo__logo {
+    width: 210px;
+    height: 206px;
+  }
+
+  .promo__title {
+    font-size: 30px;
+    line-height: 1.25;
+    letter-spacing: -1px;
+  }
+
+  .promo__subtitle {
+    max-width: 260px;
+    margin-top: 28px;
+  }
+
+  .promo__button {
+    margin-top: 80px;
   }
 }
