--- a/src/components/Main/SubTitle/SubTitle.css
+++ b/src/components/Main/SubTitle/SubTitle.css
@@ -10,3 +10,13 @@
   height: 0;
   border: 1px solid #000;
 }
+
+/* media 400*/
+
+@media screen and (max-width: 400px) {
+  .subtitle__text {
+    font-size: 18px;
+    margin-bottom: 28px;
+
+  }
+}
