feat: make adaptive Techs

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,12 @@
 @import "normalize.css";
 @import url(../../vendor/fonts.css);
 
-/* *{border: 1px solid #000;} */
-
-p,h1,h2,h3 {
+p,
+h1,
+h2,
+h3,
+ul,
+li {
   margin: 0;
   padding: 0;
 }
@@ -12,59 +15,16 @@ p,h1,h2,h3 {
   width: 100%;
   max-width: 1280px;
 
-  font-family: 'Inter', 'Atial', sans-serif;
+  font-family: "Inter", "Atial", sans-serif;
   font-style: normal;
   font-weight: 400;
-  
-  /* padding: 45px 200px 60px;
-  margin: 0 auto; */
+
   display: flex;
   flex-direction: column;
   margin: auto;
-  /* background-color: black; */
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
-  /* border: 1px solid red; */
 }
-
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-} */
-
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
