--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
 
 .header__nav {
   width: 100%;
-  margin: 0 70px;
+  margin: 0 70px 0 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -74,7 +74,7 @@
   line-height: 1.33;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   .header__nav {
     margin: 0 30px;
   }
