feat: make layouts of Burger

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -19,6 +19,8 @@ li {
   width: 100%;
   max-width: 1280px;
 
+  /* position: relative; */
+
   font-family: "Inter", "Atial", sans-serif;
   font-style: normal;
   font-weight: 400;
