--- a/src/components/Burger/BurgerButton/BurgerButton.css
+++ b/src/components/Burger/BurgerButton/BurgerButton.css
@@ -1,13 +1,11 @@
 .burger__button {
   display: none;
-  width: 23px;
+  width: 22px;
   height: 20px;
-  /* margin-right: 30px; */
   position: relative;
   z-index: 50;
-  /* border: 1px solid red; */
-  /* background-color: #000; */
   cursor: pointer;
+  margin-right: 14px;
 }
 
 .burger__button:before {
@@ -22,7 +20,7 @@
 .burger__button span {
   content: "";
   position: absolute;
-  top: 8px;
+  top: 10px;
   width: 28px;
   height: 3px;
   background-color: #000;
@@ -31,7 +29,7 @@
 .burger__button:after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -3px;
   width: 28px;
   height: 3px;
   background-color: #000;
