--- a/src/components/Burger/BurgerButton/BurgerButton.css
+++ b/src/components/Burger/BurgerButton/BurgerButton.css
@@ -55,7 +55,7 @@
   height: 3px;
   background-color: #000;
   transform: rotate(45deg);
-  /* transition: all 0.5s; */
+  transition: all 5.5s;
 
 }
 
@@ -77,7 +77,7 @@
   height: 22px;
   background-color: #000;
   transform: rotate(45deg);
-  /* transition: all 0.5s; */
+  transition: all 5.5s;
 
 }
 
