--- a/src/components/Burger/BurgerButton/BurgerButton.css
+++ b/src/components/Burger/BurgerButton/BurgerButton.css
@@ -1,38 +1,45 @@
 .burger-button {
   display: none;
-  width: 22px;
-  height: 20px;
+  width: 28px;
+  height: 23px;
   position: relative;
   z-index: 50;
   cursor: pointer;
   margin-right: 14px;
+  overflow: hidden;
 }
 
 .burger-button::before {
   content: "";
   position: absolute;
   top: 0;
-  width: 28px;
+  left: 0;
+  width: 100%;
   height: 3px;
   background-color: #000;
+  transition: all 0.5s;
 }
 
 .burger-button span {
   content: "";
   position: absolute;
-  top: 10px;
-  width: 28px;
+  top: 45%;
+  left: 0;
+  width: 100%;
   height: 3px;
   background-color: #000;
+  transition: all 0.5s;
 }
 
 .burger-button::after {
   content: "";
   position: absolute;
-  bottom: -3px;
-  width: 28px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   height: 3px;
   background-color: #000;
+  transition: all 0.5s;
 }
 
 /* !!!!!!!!!!!!!!!!!!!!!!! */
@@ -44,41 +51,29 @@
   z-index: 50;
   cursor: pointer;
   margin-right: -3px;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .burger-button_active::before {
   content: "";
   position: absolute;
-  top: 12px;
-  width: 22px;
-  height: 3px;
-  background-color: #000;
+  top: 10px;
   transform: rotate(45deg);
-  transition: all 5.5s;
-
+  transition: all 0.5s;
 }
 
 .burger-button_active span {
-  /* content: "";
-  position: absolute;
-  top: 10px;
-  width: 28px;
-  height: 3px;
-  background-color: #000; */
-  display: none;
+  /* transform: scale(0); */
+  transform: translateX(-100%);
+  transition: all 0.7s;
 }
 
 .burger-button_active::after {
   content: "";
   position: absolute;
-  left: 10px;
-  width: 3px;
-  height: 22px;
-  background-color: #000;
-  transform: rotate(45deg);
-  transition: all 5.5s;
-
+  bottom: 9px;
+  transform: rotate(-45deg);
+  transition: all 0.5s;
 }
 
 /* !!!!!!!!!!!!!!!!!!!!!!! */
@@ -91,8 +86,4 @@
   .burger-button_active {
     display: block;
   }
-}
-
-@media screen and (max-width: 400px) {
-
 }
