--- a/src/components/Burger/BurgerButton/BurgerButton.css
+++ b/src/components/Burger/BurgerButton/BurgerButton.css
@@ -5,7 +5,7 @@
   position: relative;
   z-index: 50;
   cursor: pointer;
-  margin-right: 14px;
+  margin-right: 8px;
   overflow: hidden;
 }
 
@@ -42,7 +42,6 @@
   transition: all 0.5s;
 }
 
-/* !!!!!!!!!!!!!!!!!!!!!!! */
 .burger-button_active {
   display: none;
   width: 22px;
@@ -50,7 +49,7 @@
   position: relative;
   z-index: 50;
   cursor: pointer;
-  margin-right: -3px;
+  margin-right: -3px; /* крестик прыгает, но по макету разный правый margin */
   overflow: hidden;
 }
 
@@ -63,7 +62,6 @@
 }
 
 .burger-button_active span {
-  /* transform: scale(0); */
   transform: translateX(-100%);
   transition: all 0.7s;
 }
@@ -75,8 +73,6 @@
   transform: rotate(-45deg);
   transition: all 0.5s;
 }
-
-/* !!!!!!!!!!!!!!!!!!!!!!! */
 
 @media screen and (max-width: 900px) {
   .burger-button {
