--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,5 @@
 @import "normalize.css";
-@import url(../../vendor/fonts.css);
+@import url(../../fonts/fonts.css);
 
 /* *{
   border: 1px solid #000;
