ref: pixel perfect after making Navigation

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -82,20 +82,35 @@
 } */
 
 @media screen and (max-width: 900px) {
-  .header__nav {
-    margin: 0 30px;
+  .header__nav-container {
+    margin-right: 30px;
+    display: flex;
+    justify-content: flex-end;
+    /* align-items: center; */
+  }
+  
+  .header {
+    padding-left: 30px;
   }
 
-  .header__films {
+  /* .header__films {
     display: none;
   }
 
   .header__nav-account_is-registered {
     display: none;
-  }
+  } */
 }
 
 @media screen and (max-width: 400px) {
+  .header__nav-container {
+    margin-right: 14px;
+  }
+  
+  .header {
+    padding-left: 14px;
+  }
+  
   .header__nav {
     margin: 0 14px;
   }
