--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,21 +1,5 @@
-/* .main-dark {
-} */
-
 .main-dark::before {
-  /* content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  min-height: 100%;
-  background: #2A2C2F;
-  opacity: 0.3;
-  transition: opacity 0.6s; */
-
-  content: '';
+  content: "";
   display: flex;
   position: fixed;
   top: 0;
@@ -24,26 +8,5 @@
   right: 0;
   align-items: center;
   justify-content: center;
-  /* z-index: 9999; */
-  /* visibility: hidden; */
   background-color: rgba(0, 0, 0, 0.5);
-  /* opacity: 0; */
-  /* transition: visibility 1s, opacity 1s; */
-  /* transition: opacity 1s; */
-  /* transition: opacity 1s; */
 }
-
-/* .main-dark::after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  min-height: 100%;
-  background: #2A2C2F;
-  opacity: 0.3;
-  transition: opacity 0.6s;
-} */
