--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -20,6 +20,15 @@
 .navigation__link {
   font-size: 13px;
   line-height: 1.38;
+  color: black;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.navigation__link-promo {
+  font-size: 13px;
+  line-height: 1.38;
   color: white;
   border: none;
   text-decoration: none;
@@ -38,6 +47,16 @@
 }
 
 .navigation__account__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  color: black;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.navigation__account__link-promo {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
