--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   padding: 70px 70px 49px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 .input {
   display: flex;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   justify-content: space-between;
   margin-bottom: 15px;
 }
@@ -22,6 +22,7 @@
   font-weight: 500;
   border: none;
   text-align: center;
+  outline: none;
 }
 
 .input__find-button {
@@ -30,6 +31,9 @@
   background-image: url(../../../images/find-icon.svg);
   border: none;
   background-color: white;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .short-films {
