feat: PP for MoviesCard

--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -3,17 +3,13 @@
   height: 271px;
   display: flex;
   flex-direction: column;
-  background: #FDFDFD;
-  /* filter: drop-shadow(0 0 0.75rem crimson); */
-  /* box-shadow: 0 0 15px 0 rgb(85 74 88); */
+  background: #fdfdfd;
   box-shadow: 0 0 15px 0 #e8e8e8;
-
-  /* border: 1px solid green; */
 }
 .movies-card__description {
-  height: 68px;
+  height: 37px;
   display: flex;
-  padding: 14px;
+  padding: 13px 13px 14px;
   justify-content: space-between;
 }
 .movies-card__description__text {
@@ -35,9 +31,10 @@
   height: 30px;
   background-image: url(../../../images/save-icon.svg);
   align-self: center;
-
 }
 .movies-card__picture {
-  height: 203px;
+  height: 206px;
   background-image: url(../../../images/pic-movie.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
