--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -7,7 +7,7 @@
   box-shadow: 0 0 15px 0 #e8e8e8;
 }
 .movies-card__description {
-  height: 37px;
+  height: 16%;
   display: flex;
   padding: 13px 13px 17px;
   justify-content: space-between;
@@ -33,8 +33,15 @@
   align-self: center;
 }
 .movies-card__picture {
-  height: 206px;
+  height: 84%;
   background-image: url(../../../images/pic-movie.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media screen and (max-width: 1270px) {
+  .movies-card {
+    width: 339px;
+    height: 258px;
+  }
 }
