--- a/src/components/Movies/MoreButton/MoreButton.css
+++ b/src/components/Movies/MoreButton/MoreButton.css
@@ -13,8 +13,27 @@
   text-align: center;
   cursor: pointer;
 
+  font-family: "Inter", "Atial", sans-serif;
+  font-style: normal;
+
   font-weight: 500;
   font-size: 12px;
 
   /* border: 5px solid #000; */
+}
+
+@media screen and (max-width: 900px) {
+  .more-button-area {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 26px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .more-button-area {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 50px;
+  }
 }
