--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -8,18 +8,20 @@
   display: flex;
   /* border: 1px solid red; */
   justify-content: space-between;
-  margin-bottom: 15px;
+  margin-bottom: 12px;
 }
 
 .input__loupe-icon {
   width: 34px;
   height: 34px;
+  margin-left: 7px;
 }
 
 .input__entry-field {
   width: 100%;
   font-size: 28px;
   font-weight: 500;
+  letter-spacing: 2px;
   border: none;
   text-align: center;
   outline: none;
@@ -40,11 +42,51 @@
   display: flex;
   margin-top: 30px;
   justify-content: center;
-  border: 1px solid #000;
+  align-items: center;
 }
 
 .short-films__text {
   font-size: 14px;
   font-weight: 400;
-  margin-left: 12px;
+  margin-left: 19px;
+}
+
+@media screen and (max-width: 900px) {
+  .search-form {
+    padding: 86px 30px 62px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .search-form {
+    padding: 92px 14px 50px;
+  }
+
+  .input {
+    margin-bottom: 6px;
+  }
+
+  .input__loupe-icon {
+    display: none;
+  }
+
+  .input__entry-field {
+    /* width: 100%; */
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    /* border: none; */
+    text-align: start;
+    /* outline: none; */
+  }
+
+  .short-films__text {
+    font-size: 11px;
+    font-weight: 400;
+    margin-left: 19px;
+  }
+
+  .short-films {
+    margin-top: 42px;
+  }
 }
