--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,7 +2,7 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 36px;
+  width: 32px;
   height: 20px;
 }
 
@@ -18,7 +18,7 @@
   top: 0;
   left: 0;
   right: -6px;
-  bottom: 0;
+  bottom: 1px;
   background-color: #ccc;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -45,9 +45,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(23px);
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
 }
 
 /* Rounded sliders */
