--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -35,7 +35,7 @@
 }
 .movies-card__picture {
   height: 84%;
-  background-image: url(../../../images/pic-movie.jpg);
+  background-image: url(../../images/pic-movie.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
