--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -33,6 +33,19 @@
 .movies-card__description__icon {
   align-self: center;
 }
+
+.movies-card__description__icon_saved {
+  width: 30px;
+  height: 30px;
+  border: none;
+  background-color: white;
+  align-self: center;
+  background-image: url(../../images/unsave-cross.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+}
+
 .movies-card__picture {
   height: 84%;
   background-image: url(../../images/pic-movie.jpg);
