--- a/src/components/Burger/BurgerMenu/BurgerMenu.css
+++ b/src/components/Burger/BurgerMenu/BurgerMenu.css
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 169px 0 92px;
+  padding: 165px 0 92px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -96,13 +96,17 @@
 
 /* 400 */
 @media screen and (max-width: 400px) {
-  .burger-menu {
-    width: 100vw;
-    padding: 164px 0 48px;
+  .burger-menu__blackout {
+    display: none;
   }
 
   .burger-menu__content {
-    margin-left: 13px;
+    width: 100vw;
+    padding: 161px 0 48px;
+  }
+
+  .burger-menu__list {
+    margin-right: 16px;
   }
 
   .burger-menu__list-item {
